<resources>
    <string name="app_name">MyVinyls</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="albums">Albums</string>
    <string name="Underline_artists"><u>Artists</u></string>
    <string name="Underline_genres"><u>Genres</u></string>
    <string name="Underline_albums"><u>Albums</u></string>
    <string name="search">Search..</string>
    <string name="lentTo">Lent to:</string>
    <string name="lentOn">Lent on:</string>
    <string name="DueBack">Back by:</string>
    <string name="returnAlbum">Record Returned</string>
    <string name="albumArt">Album Art/Cover</string>
    <string name="threeDotDescription">Button to expand menu</string>
    <string name="downloadProgress">Download Progress:</string>
    <string name="albumCover">Album cover</string>
    <string name="albumName">Album Name</string>
    <string name="year">Year</string>
    <string name="bandName">Band Name:</string>
    <string name="genre">Genre</string>
    <string name="notes">Notes:</string>
    <string name="add">Add</string>
    <string name="backupHeader">MyVinyls uses google drive for backing up your data.\nYour record catalog will be saved as an editable text file.\n***At this time backup of record notes is not enabled***</string>
    <string name="backup">Backup</string>
    <string name="restoreHeader">Restored version of the record catalog will override existing application catalog.\nThis can not be undone.</string>
    <string name="restore">Restore</string>
    <string name="Done">Done</string>
    <string name="dateLentOut">Date Lent out:</string>
    <string name="today">Today</string>
    <string name="dateDueBack">Date Due Back:</string>
    <string name="unset">Unset</string>
    <string name="infoHeader">Easiest way is to create the document on PC with excel.\nFormat is as follows:</string>
    <string name="infoEXP">Record ID #, Band Name, Album Name, Year, Genre1, Genre2, Genre3,...</string>
    <string name="infoHow">Once done save the excel document as a txt file and place in your google drive folder.</string>
    <string name="sampleDoc">Sample Doc</string>
    <string name="restoreHowTo">Then simply click restore on the previous screen and select the file in google drive to load your record collection to the database</string>
    <string name="UseDarkTheme">Use Dark Theme</string>
    <string name="deleteImages">The album artwork of this app is stored outside of the install folder.  This allows google photos to backup the images.  Click here to remove the images from this device (Uninstalling will not delete the images)</string>
    <string name="deleteAllImagesWarning">Warning you are about to delete all of your saved album artwork.  This can not be undone unless you have backed-up your photos with google pictures.  If you are sure you want to clear your photos check the box bellow and click ok.</string>
    <string name="IUnderstand">I Understand</string>
    <string name="collectionSize">Collection Size: </string>
    <string name="wishlistSize">Wishlist Size: </string>
    <string name="recordSize">Record Size</string>

    <string-array name="recordSize_array">
        <item> </item>
        <item>7\"</item>
        <item>10\"</item>
        <item>12\"</item>
    </string-array>
</resources>
