<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="#D3D3D3"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Import Instructions"
            android:textStyle="bold"
            android:id="@+id/textView15" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/infoHeader"
            android:id="@+id/textView16" />

        <TextView
            android:layout_marginTop="25dp"
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/infoEXP"
            android:id="@+id/textView17" />

        <TextView
            android:layout_marginTop="25dp"
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/infoHow"
            android:id="@+id/textView18" />

        <TextView
            android:layout_marginTop="25dp"
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sampleDoc"
            android:id="@+id/textViewSampleDoc"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_marginTop="25dp"
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restoreHowTo"
            android:id="@+id/textView19" />
    </LinearLayout>
</LinearLayout>