<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#f5f5f5">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backupHeader"
        android:textSize="20dp"
        android:id="@+id/textView12" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="349dp"
        android:layout_height="110dp"
        android:text="@string/backup"
        android:textAllCaps="false"
        android:textSize="40dp"
        android:id="@+id/buttonBackup"
        android:layout_gravity="center_horizontal"
        android:drawablePadding="-50dp"
        android:drawableLeft="@mipmap/ic_cloud_upload_black_48dp"
        android:drawableStart="@mipmap/ic_cloud_upload_black_48dp"
        android:onClick="backupClicked"
        android:paddingLeft="50dp"
        android:paddingStart="50dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restoreHeader"
        android:textSize="20dp"
        android:id="@+id/textView13" />

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/buttonRestore"
        android:text="@string/restore"
        android:layout_width="349dp"
        android:layout_height="110dp"
        android:textSize="40dp"
        android:textAllCaps="false"
        android:drawableLeft="@mipmap/ic_cloud_download_black_48dp"
        android:layout_gravity="center_horizontal"
        android:onClick="restoreClicked"
        android:paddingLeft="50dp"
        android:paddingStart="50dp"/>

</LinearLayout>