<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:weightSum="1">

    <TextView
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lentTo"
        android:id="@+id/textView7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:layout_marginLeft="25dp"
        android:ems="10"
        android:id="@+id/editTextLendoutName" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dateLentOut"
        android:id="@+id/textView10"
       />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePickerLentOut"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:text="@string/today"
        android:background="@drawable/buttonoutline"
        android:onClick="dateOutExpand"
        android:layout_marginLeft="45dp"
        android:ems="10"
        android:id="@+id/editTextLentoutDateOut"
        />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dateDueBack"
        android:layout_marginLeft="10dp"
        android:id="@+id/textView11"
        />
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePickerDueBack"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:textAllCaps="false"
        android:onClick="dueBackExpand"
        android:text="@string/unset"
        android:background="@drawable/buttonoutline"
        android:ems="10"
        android:id="@+id/editTextLentoutDue" />

    <Button
        android:layout_marginTop="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:id="@+id/buttonAddlentout"
        android:background="@drawable/buttonoutline"
        android:onClick="lentOutDone"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
</ScrollView>